# DataMate

./: .gitignore  DEVELOPMENT-zh.md  DEVELOPMENT.md  LICENSE  Makefile  README-zh.md  README.md
runtime/datamate-python/: .env.example  pyproject.toml
runtime/datamate-python/app/: main.py  middleware.py
runtime/datamate-python/app/core/: config.py
runtime/datamate-python/app/db/: datascope.py  session.py
runtime/datamate-python/app/module/: __init__.py
runtime/datamate-python/deploy/: docker-entrypoint.sh
runtime/ops/: README.md  pyproject.toml
runtime/ops/annotation/: __init__.py
runtime/ops/annotation/image_object_detection_bounding_box/: __init__.py  metadata.yml  process.py
runtime/ops/annotation/image_semantic_segmentation/: process.py
runtime/ops/examples/test_operator/: README.md  __init__.py  metadata.yml  process.py  requirements.txt  test_operator.tar
runtime/ops/filter/: __init__.py
runtime/ops/filter/file_with_high_repeat_phrase_rate_filter/: __init__.py  metadata.yml  process.py
runtime/ops/filter/file_with_high_repeat_word_rate_filter/: __init__.py  metadata.yml  process.py
runtime/ops/filter/file_with_high_special_char_rate_filter/: __init__.py  metadata.yml  process.py
runtime/ops/filter/img_advertisement_images_cleaner/: __init__.py  metadata.yml  process.py  wechat_qrcode_model.py
runtime/ops/filter/img_blurred_images_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/filter/img_duplicated_images_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/filter/img_similar_images_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/filter/remove_duplicate_file/: __init__.py  metadata.yml  process.py
runtime/ops/filter/remove_file_with_many_sensitive_words/: __init__.py  metadata.yml  process.py
runtime/ops/filter/remove_file_with_short_or_long_length/: __init__.py  metadata.yml  process.py
runtime/ops/formatter/: __init__.py
runtime/ops/formatter/mineru_formatter/: __init__.py  metadata.yml  process.py
runtime/ops/formatter/slide_formatter/: __init__.py  metadata.yml  process.py
runtime/ops/llms/: __init__.py
runtime/ops/llms/qa_condition_evaluator/: __init__.py  metadata.yml  process.py
runtime/ops/llms/text_quality_evaluation/: __init__.py  constant.py  metadata.yml  process.py  prompt_config.py
runtime/ops/mapper/: __init__.py
runtime/ops/mapper/content_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/credit_card_number_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/email_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/emoji_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/extra_space_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/full_width_characters_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/garble_characters_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/html_tag_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/id_number_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_denoise/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_direction_correct/: __init__.py  base_model.py  metadata.yml  process.py
runtime/ops/mapper/img_enhanced_brightness/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_enhanced_contrast/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_enhanced_saturation/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_enhanced_sharpness/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_perspective_transformation/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_resize/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_shadow_remove/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_type_unify/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/invisible_characters_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/ip_address_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/knowledge_relation_slice/: __init__.py  graph_sim_func.py  knowledge_relation.py  knowledge_slice.py  metadata.yml  process.py
runtime/ops/mapper/legend_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/phone_number_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/pii_ner_detection/: __init__.py  custom_entities.py  metadata.yml  process.py
runtime/ops/mapper/political_word_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/remove_duplicate_sentences/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/sexual_and_violent_word_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/text_to_word/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/traditional_chinese/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/unicode_space_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/url_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/xml_tag_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/slicer/: __init__.py
runtime/ops/slicer/segmentation/: __init__.py  metadata.yml  process.py
runtime/ops/slicer/slide_annotation_slicer/: __init__.py  metadata.yml  process.py
runtime/ops/slicer/slide_simple_slicer/: __init__.py  metadata.yml  process.py
runtime/ops/user/: __init__.py
runtime/python-executor/: README-zh.md  README.md  pyproject.toml
runtime/python-executor/datamate/: auto_annotation_worker.py  operator_runtime.py
runtime/python-executor/datamate/common/: error_code.py
runtime/python-executor/datamate/core/: base_op.py  constant.py  dataset.py
runtime/python-executor/datamate/ops/: __init__.py
runtime/python-executor/datamate/scheduler/: __init__.py  cmd_task_scheduler.py  func_task_scheduler.py  (+2 more)
(+649 files in other folders)
