[project]
name = "datamate-python"
version = "0.1.0"
description = "This is the Python backend of DataMate."
authors = [
    {name = "Jason Wang",email = "jasonwong2019@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python =">=3.12,<4.0.0"
dependencies = [
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "unstructured (>=0.18.21,<0.19.0)",
    "markdown (>=3.10,<4.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "jq (>=1.10.0,<2.0.0)",
    "openai (>=2.9.0,<3.0.0)",
    "langchain-openai (>=1.1.1,<2.0.0)",
    "langchain (>=1.1.3,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "fastapi-mcp (>=0.4.0,<0.5.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "lightrag-hku (==1.4.9.8)",
    "pytest (>=9.0.2,<10.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "app" }
]
